--- a/app/src/components/QuoteWrapper/QuoteWrapper.module.scss
+++ b/app/src/components/QuoteWrapper/QuoteWrapper.module.scss
@@ -1,7 +1,7 @@
 @import '@/styles/mixins.scss';
 
-.app {
-    height: 100%;
-    width: 100%;
+.quoteWrapper {
+    height: 100px;
+    width: 100px;
     border: 1px solid red;
 }
