--- a/app/src/components/QuotesList/QuotesList.module.scss
+++ b/app/src/components/QuotesList/QuotesList.module.scss
@@ -1,7 +1,7 @@
 @import '@/styles/mixins.scss';
 
-.app {
-    height: 100%;
-    width: 100%;
+.quotesList {
+    height: 500px;
+    width: 500px;
     border: 1px solid red;
 }
