--- a/app/src/pages/HomePage/HomePage.module.scss
+++ b/app/src/pages/HomePage/HomePage.module.scss
@@ -1,3 +1,9 @@
 @import '@/styles/mixins.scss';
 
-.homePage {}
+.homePage {
+    @include col;
+    height: 100%;
+    gap: var(--app-gap);
+    margin-top: 140px;
+    align-items: center;
+}
