--- a/app/src/styles/reset.scss
+++ b/app/src/styles/reset.scss
@@ -3,9 +3,8 @@
     padding: 0;
     box-sizing: border-box;
     font-smooth: always;
-    font-family: Assistant-Regular;
+    font-family: Arial, Helvetica, sans-serif;
     text-rendering: optimizeLegibility;
-
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
 }
