Expanded UI, added significant portion of authors/books backend logic - WIP

--- a/app/src/components/QuotesList/QuotesList.module.scss
+++ b/app/src/components/QuotesList/QuotesList.module.scss
@@ -1,6 +1,8 @@
 @import '@/styles/mixins.scss';
 
 .quotesList {
-    height: 500px;
-    width: 500px;
+    @include col;
+    width: 60%;
+    gap: var(--app-gap);
+    overflow: auto;
 }
