--- a/app/src/components/QuoteWrapper/QuoteWrapper.module.scss
+++ b/app/src/components/QuoteWrapper/QuoteWrapper.module.scss
@@ -1,6 +1,30 @@
 @import '@/styles/mixins.scss';
 
 .quoteWrapper {
-    height: 100px;
-    width: 100px;
+    @include row;
+    position: relative;
+    justify-content: space-between;
+    padding: var(--app-padding);
+    gap: calc(var(--app-gap) / 2);
+    box-shadow: var(--app-box-shadow);
+    border-radius: var(--app-border-radius);
+
+    .info {
+        @include col;
+        gap: calc(var(--app-gap) / 2);
+
+        .text {
+            font-weight: bold;
+            color: var(--text-color-strong);
+        }
+
+        .author {
+            font-size: 14;
+            color: var(--text-color-weak);
+        }
+    }
+
+    &>button {
+        width: 100px;
+    }
 }
