--- a/app/src/pages/QuotesPage/QuotesPage.module.scss
+++ b/app/src/pages/QuotesPage/QuotesPage.module.scss
@@ -1,3 +1,12 @@
 @import '@/styles/mixins.scss';
 
-.quotesPage {}
+.quotesPage {
+    @include Page;
+    @include col;
+    align-items: center;
+    justify-content: center;
+
+    &>h1 {
+        color: var(--primary-color);
+    }
+}
