--- a/app/src/components/QuoteWrapper/QuoteWrapper.module.scss
+++ b/app/src/components/QuoteWrapper/QuoteWrapper.module.scss
@@ -1,30 +1,56 @@
 @import '@/styles/mixins.scss';
 
 .quoteWrapper {
-    @include row;
-    position: relative;
-    justify-content: space-between;
-    padding: var(--app-padding);
-    gap: calc(var(--app-gap) / 2);
-    box-shadow: var(--app-box-shadow);
-    border-radius: var(--app-border-radius);
+  @include col;
+  position: relative;
+  padding: var(--app-padding);
+  gap: calc(var(--app-gap) / 2);
+  box-shadow: var(--app-box-shadow);
+  border-radius: var(--app-border-radius);
+
+  .staticInfo {
+    &>button {
+      height: 72px;
+      width: 72px;
+      margin-top: -10px;
+      position: absolute;
+      border-radius: 50%;
+    }
 
     .info {
-        @include col;
-        gap: calc(var(--app-gap) / 2);
+      @include col;
+      margin-left: 100px;
+      gap: calc(var(--app-gap) / 2);
 
-        .text {
-            font-weight: bold;
-            color: var(--text-color-strong);
-        }
+      .text {
+        font-weight: bold;
+        color: var(--text-color-strong);
+      }
 
-        .author {
-            font-size: 14;
-            color: var(--text-color-weak);
-        }
+      .author {
+        font-size: 14;
+        color: var(--text-color-weak);
+      }
     }
+  }
 
-    &>button {
-        width: 100px;
+  .dynamicInfo {
+    @include col;
+    margin-left: 100px;
+    gap: calc(var(--app-gap) / 2);
+
+    .books {
+      @include col;
+      gap: calc(var(--app-gap) / 2);
     }
+  }
+
+  .toggleDropdown {
+    position: absolute;
+    bottom: 10px;
+    left: 50%;
+    transform: translate(-50%);
+    cursor: pointer;
+    color: var(--primary-color);
+  }
 }
