--- a/app/src/components/QuotesList/QuotesList.module.scss
+++ b/app/src/components/QuotesList/QuotesList.module.scss
@@ -1,8 +1,18 @@
 @import '@/styles/mixins.scss';
 
 .quotesList {
-    @include col;
-    width: 60%;
-    gap: var(--app-gap);
-    overflow: auto;
+  @include col;
+  height: 100%;
+  width: 50%;
+  padding: 0 var(--app-padding);
+  gap: var(--app-gap);
+  overflow: hidden;
+  overflow-y: scroll;
+  scrollbar-width: none;
+  -ms-overflow-style: none;
+  border: 1px solid red;
+
+  &::-webkit-scrollbar {
+    display: none;
+  }
 }
