--- a/app/src/pages/QuotesPage/QuotesPage.module.scss
+++ b/app/src/pages/QuotesPage/QuotesPage.module.scss
@@ -1,12 +1,19 @@
 @import '@/styles/mixins.scss';
 
 .quotesPage {
-    @include Page;
-    @include col;
-    align-items: center;
-    justify-content: center;
+  @include Page;
+  @include col;
+  align-items: center;
+  justify-content: center;
 
-    &>h1 {
-        color: var(--primary-color);
-    }
+  .header {
+    width: 100%;
+    position: sticky;
+    top: 0;
+    z-index: 1000;
+    padding: calc(var(--app-padding) / 2);
+    text-align: center;
+    color: var(--primary-color);
+    background-color: white;
+  }
 }
