--- a/app/src/components/Button/Button.module.scss
+++ b/app/src/components/Button/Button.module.scss
@@ -1,7 +1,7 @@
 @import '@/styles/mixins.scss';
 
 .button {
-  --color: var(--secondary-color);
+  --color: var(--primary-color);
   display: flex;
   flex-direction: row;
   justify-content: center;
@@ -38,16 +38,8 @@
     box-shadow: 0 10px 20px rgb(100 116 139 / 6%), 0 5px 100px rgb(100 116 139 / 10%);
   }
 
-  &.delete {
-    --color: #d13e3e;
-
-    &:hover {
-      --color: #df5353;
-    }
-  }
-
   &.secondary {
-    border: 1px solid var(--secondary-color);
+    border: 1px solid var(--primary-color);
     background: white;
     color: black;
 
@@ -65,38 +57,6 @@
         color: #d13e3e;
       }
     }
-  }
-
-  &.stretch {
-    width: 100%;
-  }
-
-  &.capitalize {
-    text-transform: capitalize;
-  }
-
-  &.error {
-    background-color: var(--error-color);
-  }
-
-  &.square {
-    border-radius: 0;
-  }
-
-  &.round {
-    border-radius: 50%;
-  }
-
-  &.small {
-    padding: 6px;
-    font-size: 12px;
-    font-weight: 300;
-  }
-
-  &.mid {
-    padding: 12px 16px;
-    font-size: 14px;
-    font-weight: 400;
   }
 
   &:disabled {
